# python-version-fuckery

./: .gitignore  README.md  pyproject.toml
