[tool.poetry]
name = "python-version-fuckery"
version = "0.1.0"
description = ""
authors = ["Alex Metzger <asm@asm.io>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
pvf = "python_version_fuckery.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
